# archetype

./: .gitignore  CLAUDE.md  LICENSE  README.md  Serialization.cpp  Serialization.h  archetype-mode.el  build-Linux.sh  cloudbuild.yaml
archetype/: .gitignore  BUILD  CMakeLists.txt  Capture.cpp  Capture.h  ConsoleInput.cpp  ConsoleInput.h  ConsoleInput.hh  ConsoleOutput.h  ConsoleOutput.hh  Dockerfile  Expression.cc  Expression.cpp  Expression.h  FileStorage.cpp  FileStorage.h  FileStorage.hh  GameDefinition.cpp  GameDefinition.h  ITestSuite.h  IdIndex.h  IdIndex.hh  Keywords.cc  Keywords.cpp  Keywords.h  Makefile  Object.cc  Object.cpp  Object.h  Object.hh  PagedOutput.hh  ReadEvalPrintLoop.cc  ReadEvalPrintLoop.cpp  ReadEvalPrintLoop.h  Serialization.cc  Serialization.cpp  Serialization.h  SourceFile.cc  SourceFile.cpp  SourceFile.h  (+90 more)
archetype.xcodeproj/: project.pbxproj
archetype.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
archetype.xcodeproj/project.xcworkspace/xcuserdata/derekjones.xcuserdatad/: UserInterfaceState.xcuserstate
archetype.xcodeproj/xcuserdata/derekjones.xcuserdatad/xcschemes/: xcschememanagement.plist
archetype.xcodeproj/xcuserdata/dtj.xcuserdatad/xcschemes/: archetype.xcscheme  xcschememanagement.plist
archetype/archetype/: CMakeLists.txt  Capture.cc  Capture.hh  ConsoleInput.cc  Expression.cc  ITestSuite.hh  IdIndex.hh  PagedOutput.cc  Serialization.hh  TestIdIndex.hh  TestSerialization.cc  TestSourceFile.cc  TestSystemParser.hh  TestTokenStream.cc  Universe.cc  Value.hh  WrappedOutput.hh  update_universe.cc
archetype/games/: author.ach  bare.ach  barer.ach  gorreven.ach  gorreven.lex  gorreven.typ  intrptr.ach  lexicon.ach  starship.ach  starship.lex  utility.ach
archetype/main/: BUILD.bazel  main.cc
drivers/: Dockerfile  README.md  archetype.html
drivers/archetype/: CMakeLists.txt  Capture.cc  Expression.cc  Expression.hh  FileStorage.cc  Keywords.hh  Object.cc  ReadEvalPrintLoop.hh  Serialization.cc  Serialization.hh  SourceFile.cc  Statement.cc  StringInput.hh  SystemObject.cc  SystemParser.cc  SystemParser.hh  SystemSorter.hh  TestExpression.cc  TestIdIndex.cc  TestObject.cc  TestRegistry.cc  TestSerialization.cc  TestStatement.cc  TestSystemObject.cc  TestSystemParser.cc  TestTokenStream.cc  TestUniverse.cc  TestValue.cc  TestWrappedOutput.cc  Value.cc  Value.hh  Wellspring.cc  inspect_universe.cc  inspect_universe.hh  main.cc  update_universe.cc  update_universe.hh
drivers/cloud_run/: main.py  requirements.txt
drivers/games/: bare.ach  gorreven.lex  gorreven.typ  intrptr.ach  starship.lex  starship.typ  utility.ach
games/: animal.ach  author.ach  author.arch  bare.ach  barer.ach  barer.arch  cardinal.ach  cherry.arch  debug.arch  gorreven.ach  gorreven.arch  gorreven.typ  intrptr.ach  intrptr.arch  lexicon.ach  make_a_deal.arch  shipdir.ach  standard.arch  starship.ach  starship_types.arch  utility.arch
gcp_archetype/: .gitignore  BUILD.bazel  WORKSPACE.bazel  gcs_update.cc
snap/: snapcraft.yaml
src/: CMakeLists.txt  ConsoleInput.cc  Keywords.cc  Object.cc  Object.hh  PagedOutput.cc  ReadEvalPrintLoop.cc  SourceFile.cc  Statement.cc  Statement.hh  StringIdIndex.hh  StringOutput.hh  SystemObject.cc  SystemObject.hh  SystemParser.cc  SystemSorter.cc  TestIdIndex.cc  TestObject.cc  TestSerialization.cc  TestSourceFile.cc  TestSourceFile.hh  TestSystemObject.cc  TestSystemObject.hh  TestSystemParser.cc  TestSystemSorter.hh  TestTokenStream.hh  TestUniverse.cc  TestWrappedOutput.hh  Token.cc  Token.hh  TokenStream.cc  TokenStream.hh  Universe.cc  Wellspring.cc  Wellspring.hh  main.cc  update_universe.cc
